"""TCP + UDP Server cho h·ªá th·ªëng ƒë·∫∑t v√© xe kh√°ch (Protocol v2: Message Framing)"""

import socket
import threading
import json
import time
import os
import sys
import struct

# Th√™m th∆∞ m·ª•c hi·ªán t·∫°i v√†o sys.path
current_dir = os.path.dirname(os.path.abspath(__file__))
sys.path.insert(0, current_dir)

from route_manager import RouteManager
from trip_manager import TripManager
from seat_manager import SeatManager
from booking_manager import BookingManager
from file_upload import FileUploadHandler
from email_service import EmailService
from config import SERVER_CONFIG, EMAIL_CONFIG


class BusBookingServer:
    def __init__(self, tcp_port=55555, udp_port=55556):
        self.tcp_port = tcp_port
        self.udp_port = udp_port
        self.host = '0.0.0.0'
        
        self.data_dir = os.path.join(current_dir, 'data')
        self.upload_dir = os.path.join(current_dir, 'uploads')
        
        self.route_manager = RouteManager(self.data_dir)
        self.trip_manager = TripManager(self.data_dir)
        self.seat_manager = SeatManager(self.data_dir)
        
        # Initialize Email Service (optional - t·ª´ environment variables)
        # Kh·ªüi t·∫°o Email Service v·ªõi config t·ª´ environment variables
        self.email_service = EmailService(
            smtp_server=EMAIL_CONFIG['smtp_server'],
            smtp_port=EMAIL_CONFIG['smtp_port'],
            username=EMAIL_CONFIG['username'],
            password=EMAIL_CONFIG['password'],
            use_tls=EMAIL_CONFIG['use_tls']
        )
        
        # Debug: In ra config ƒë·ªÉ ki·ªÉm tra
        if not self.email_service.enabled:
            print("[Server] ‚ö†Ô∏è Email service ch∆∞a ƒë∆∞·ª£c c·∫•u h√¨nh")
            print(f"[Server] EMAIL_USERNAME: {'ƒê√£ set' if EMAIL_CONFIG['username'] else 'Ch∆∞a set'}")
            print(f"[Server] EMAIL_PASSWORD: {'ƒê√£ set' if EMAIL_CONFIG['password'] else 'Ch∆∞a set'}")
            print("[Server] üí° ƒê·ªÉ c·∫•u h√¨nh email, set environment variables:")
            print("   set EMAIL_USERNAME=your-email@gmail.com")
            print("   set EMAIL_PASSWORD=your-app-password")
        else:
            print(f"[Server] ‚úÖ Email service ƒë√£ ƒë∆∞·ª£c c·∫•u h√¨nh: {EMAIL_CONFIG['username']}")
        
        self.booking_manager = BookingManager(self.data_dir, email_service=self.email_service)
        self.file_handler = FileUploadHandler(self.upload_dir)
        
        self.tcp_socket = socket.socket(socket.AF_INET, socket.SOCK_STREAM)
        self.tcp_socket.setsockopt(socket.SOL_SOCKET, socket.SO_REUSEADDR, 1)
        
        self.udp_socket = socket.socket(socket.AF_INET, socket.SOCK_DGRAM)
        self.udp_socket.setsockopt(socket.SOL_SOCKET, socket.SO_BROADCAST, 1)
        
        self.running = False
        self.clients = []
        
        print("="*60)
        print("H·ªÜ TH·ªêNG ƒê·∫∂T V√â XE KH√ÅCH (IO FRAMING ENABLED)")
        print("="*60)
    
    def start(self):
        self.running = True
        self.tcp_socket.bind((self.host, self.tcp_port))
        self.tcp_socket.listen(5)
        print(f"[TCP Server] L·∫Øng nghe tr√™n {self.host}:{self.tcp_port}")
        
        threading.Thread(target=self.udp_broadcast_loop, daemon=True).start()
        threading.Thread(target=self.cleanup_loop, daemon=True).start()
        
        # Start gRPC server (optional - n·∫øu mu·ªën d√πng)
        try:
            grpc_enabled = os.getenv('GRPC_ENABLED', 'false').lower() == 'true'
            if grpc_enabled:
                from grpc_server import serve_grpc
                self.grpc_server = serve_grpc(self, port=SERVER_CONFIG['grpc_port'])
                print(f"[Server] ‚úÖ gRPC server ƒë√£ kh·ªüi ƒë·ªông tr√™n port {SERVER_CONFIG['grpc_port']}")
        except ImportError:
            # gRPC ch∆∞a ƒë∆∞·ª£c c√†i ho·∫∑c ch∆∞a generate proto files
            pass
        except Exception as e:
            print(f"[Server] ‚ö†Ô∏è Kh√¥ng th·ªÉ kh·ªüi ƒë·ªông gRPC server: {e}")
            print(f"[Server] üí° G·ª£i √Ω: C√†i grpcio v√† generate proto files n·∫øu mu·ªën d√πng gRPC")
        
        print("\n[Server] S·∫µn s√†ng ph·ª•c v·ª•!\n")
        
        while self.running:
            try:
                client_socket, addr = self.tcp_socket.accept()
                print(f"[TCP] K·∫øt n·ªëi: {addr}")
                threading.Thread(target=self.handle_client, args=(client_socket, addr), daemon=True).start()
            except KeyboardInterrupt:
                self.stop()
                break
            except Exception as e:
                print(f"[Server] L·ªói accept: {e}")

    def _recv_n_bytes(self, sock, n):
        """ƒê·ªçc ch√≠nh x√°c n bytes t·ª´ socket"""
        data = b''
        while len(data) < n:
            try:
                chunk = sock.recv(n - len(data))
                if not chunk: return None
                data += chunk
            except Exception:
                return None
        return data

    def handle_client(self, client_socket, client_address):
        connection_id = f"{client_address[0]}:{client_address[1]}"
        self.clients.append(connection_id)
        
        try:
            client_socket.settimeout(300.0)
            while self.running:
                # 1. ƒê·ªçc header (4 bytes ƒë·ªô d√†i)
                length_data = self._recv_n_bytes(client_socket, 4)
                if not length_data: break
                
                length = struct.unpack('!I', length_data)[0]
                
                # 2. ƒê·ªçc body (JSON payload)
                body_data = self._recv_n_bytes(client_socket, length)
                if not body_data: break
                
                try:
                    request = json.loads(body_data.decode('utf-8'))
                    command = request.get('command')
                    
                    # FIX: Session ID Priority
                    session_id = request.get('session_id')
                    if session_id:
                        client_id = session_id
                    else:
                        client_id = connection_id
                        print(f"[TCP] ‚ö†Ô∏è Client {connection_id} missing SessionID (Old Client?)")

                    print(f"[TCP] {client_id} -> {command}")
                    
                    # G·ªçi process_command v·ªõi client_id chu·∫©n
                    response = self.process_command(command, request, client_id)
                    
                    # 3. G·ª≠i response (Header + Body)
                    resp_bytes = json.dumps(response).encode('utf-8')
                    header = struct.pack('!I', len(resp_bytes))
                    
                    client_socket.sendall(header)
                    client_socket.sendall(resp_bytes)
                    
                except json.JSONDecodeError:
                    print(f"[TCP] L·ªói JSON t·ª´ {connection_id}")
                    continue
                    
        except Exception as e:
            print(f"[TCP] L·ªói {connection_id}: {e}")
        finally:
            if connection_id in self.clients: self.clients.remove(connection_id)
            client_socket.close()
            print(f"[TCP] Ng·∫Øt k·∫øt n·ªëi: {connection_id}")
    
    def process_command(self, command: str, request: dict, client_id: str) -> dict:
        if command == 'GET_CITIES':
            return self.route_manager.get_all_cities()
        elif command == 'SEARCH_ROUTES':
            return {'routes': self.route_manager.search_routes(request.get('from_city'), request.get('to_city'))}
        elif command == 'GET_DATES':
            return {'dates': self.trip_manager.get_available_dates(request.get('route_id'))}
        elif command == 'SEARCH_TRIPS':
            trips = self.trip_manager.search_trips(request.get('route_id'), request.get('date'))
            for trip in trips:
                # OPTIMIZATION: Kh√¥ng init gh·∫ø ·ªü ƒë√¢y ƒë·ªÉ tr√°nh IO disk ch·∫≠m
                # N·∫øu ch∆∞a init -> coi nh∆∞ c√≤n tr·ªëng t·∫•t c·∫£
                if trip['id'] in self.seat_manager.seats_data:
                    trip['available_seats'] = self.seat_manager.get_available_seats_count(trip['id'])
                else:
                    trip['available_seats'] = trip.get('total_seats', 40)
            return {'trips': trips}
        elif command == 'GET_SEATS':
            return {'seats': self.seat_manager.get_trip_seats(request.get('trip_id'))}
        elif command == 'SELECT_SEAT':
            return self.seat_manager.select_seat(request.get('trip_id'), request.get('seat_id'), client_id)
        elif command == 'UNSELECT_SEAT':
            return self.seat_manager.unselect_seat(request.get('trip_id'), request.get('seat_id'), client_id)
        elif command == 'BOOK_SEATS':
            import time
            t_start = time.time()
            seat_res = self.seat_manager.book_seats(request.get('trip_id'), request.get('seat_ids', []), client_id)
            
            if seat_res['success']:
                # Idempotency check
                if seat_res.get('action') == 'existing':
                    print(f"[Profiling] Book Existing took {time.time()-t_start:.4f}s")
                    return seat_res

                # L·∫•y th√¥ng tin trip v√† route ƒë·ªÉ g·ª≠i email
                trip_id = request.get('trip_id')
                trip_info = self.trip_manager.get_trip_by_id(trip_id)
                route_info = None
                if trip_info:
                    route_info = self.route_manager.get_route_by_id(trip_info.get('route_id'))
                
                booking_res = self.booking_manager.create_booking(
                    trip_id,
                    request.get('seat_ids'),
                    request.get('customer_info'),
                    trip_info=trip_info,
                    route_info=route_info
                )
                print(f"[Profiling] Book New took {time.time()-t_start:.4f}s")
                return booking_res
                
            return seat_res
        elif command == 'UPLOAD_FILE':
            return self.file_handler.save_file(request.get('filename'), bytes.fromhex(request.get('file_data')), request.get('booking_id'))
        elif command == 'GET_TRIP_INFO':
            trip_info = self.trip_manager.get_trip_by_id(request.get('trip_id'))
            if trip_info:
                return {'success': True, 'trip': trip_info}
            return {'success': False, 'error': 'Trip not found'}
        return {'error': f'Unknown command: {command}'}
    
    def udp_broadcast_loop(self):
        while self.running:
            try:
                all_seats = self.seat_manager.seats_data
                if all_seats:
                    # Gi·ªõi h·∫°n 50 chuy·∫øn
                    limited = dict(list(all_seats.items())[:50])
                    msg = {'type': 'SEAT_UPDATE', 'timestamp': time.time(), 'seats_data': limited}
                    data = json.dumps(msg).encode('utf-8')
                    if len(data) < 64000:
                        self.udp_socket.sendto(data, ('<broadcast>', self.udp_port))
                time.sleep(2)
            except: pass
    
    def cleanup_loop(self):
        while self.running:
            self.seat_manager.cleanup_expired_locks(300)
            time.sleep(60)

    def stop(self):
        self.running = False
        try: self.tcp_socket.close()
        except: pass
        try: self.udp_socket.close()
        except: pass

if __name__ == '__main__':
    server = BusBookingServer()
    try: server.start()
    except KeyboardInterrupt: server.stop()
